--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RoomShoppingList</string>
+    <string name="add_shopping_item">Add Item</string>
 </resources>
