--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RoomShoppingList</string>
     <string name="add_shopping_item">Add Item</string>
+    <string name="title">Title</string>
+    <string name="enter_title">Enter the Item name</string>
 </resources>
