- Added ShoppingItemActivity and Fragment which will allow items to be added to the database - Pre-filled the database with one item to show in the recyclerview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="add_shopping_item">Add Item</string>
     <string name="title">Title</string>
     <string name="enter_title">Enter the Item name</string>
+    <string name="save">Save</string>
+    <string name="enter_store">Enter name of store</string>
+    <string name="current_time">Current Time</string>
 </resources>
