- Refactored ShoppingItems to ShoppingItem - Cleaned up AsyncTask in both ShoppingListFragment and ShoppingItemFragment - Fixed the Recyclerview XML, now the ShoppingListFragment shows multiple items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="save">Save</string>
     <string name="enter_store">Enter name of store</string>
     <string name="current_time">Current Time</string>
+    <string name="database_name">shopping-list</string>
+
+    <string name="db_name">shopping-list</string>
+
 </resources>
